# Youtube-Comments-Sentiment-Analysis

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: action.yaml
artifacts/training_artifacts/data_validation/: data_validation.json
config/: schema.yaml
notebooks/: 01_experiment.ipynb  02_exploring_data.ipynb  03_model_building_ml.ipynb  helper.py
tests/: test_app.py
youtube_sentiment/cloud_storage/: aws_storage.py
youtube_sentiment/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
youtube_sentiment/configuration/: aws_connection.py  mongo_db_connection.py
youtube_sentiment/constants/: __init__.py
youtube_sentiment/data_access/: database_configuration.py  exporting_data_configuration.py  extracting_data_from_youtube.py
youtube_sentiment/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
youtube_sentiment/exception/: __init__.py
youtube_sentiment/logger/: __init__.py
youtube_sentiment/ml/: model.py
youtube_sentiment/pipline/: prediction_pipeline.py  training_pipeline.py
youtube_sentiment/utils/: utilities.py
