[tool.poetry]
name = "youtube-sentiment"
version = "0.1.0"
description = "youtube comments sentiment classification"
authors = ["Saurav Thakur <sauravthakur1341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.1.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
